--- a/GraduationDesignSystem/WebContent/login.html
+++ b/GraduationDesignSystem/WebContent/login.html
@@ -20,7 +20,7 @@
 		<div class="content">
 			<div class="student">
 				<div class="login-box">
-					<form action="" method="post">
+					<form action="student-login.action" method="post">
 						<div class="login-form">
 							
 						</div>
