--- a/GraduationDesignSystem/WebContent/login.html
+++ b/GraduationDesignSystem/WebContent/login.html
@@ -24,7 +24,7 @@
 		<div class="wrapper">
 			<div class="wrapper-login">
 				<div class="login-box">
-					<form action="" method="post" class="form-horizontal">
+					<form method="post" class="form-horizontal">
 						<div class="row">
 							<div class="form-group">
 							    <label class="col-sm-2 control-label col-sm-offset-1">账号</label>
@@ -40,7 +40,7 @@
 							</div>
 						</div>
 						<div>
-						  <button type="button" class="btn btn-width btn-primary center-block">登录</button>
+						  <button type="button" id="login" class="btn btn-width btn-primary center-block">登录</button>
 						</div>
 					</form>
 				</div>
