修改交互数据 --version2

--- a/GraduationDesignSystem/WebContent/login.html
+++ b/GraduationDesignSystem/WebContent/login.html
@@ -17,7 +17,7 @@
 	<div class="content-panel">
 		<div class="header">
 			<div class="choose">
-				<a class="switch-btn" id="switch-stu-login" href="javascript:void(0)">学生登录</a>
+				<a class="switch-btn-focus" id="switch-stu-login" href="javascript:void(0)">学生登录</a>
 				<a class="switch-btn" href="javascript:void(0)">教师登录</a>
 				<div class="switch-line" ></div>
 			</div>
