--- a/GraduationDesignSystem/WebContent/login.html
+++ b/GraduationDesignSystem/WebContent/login.html
@@ -30,7 +30,7 @@
 							<div class="form-group">
 							    <label class="col-sm-2 col-md-2 col-xs-2 control-label col-sm-offset-1 col-xs-offset-1 col-md-offset-1">账号</label>
 							    <div class="col-sm-8 col-md-8 col-xs-8">
-							    	<input type="text" id="number" class="form-control" id="inputEmail3" placeholder="请输入账号">
+							    	<input type="text" id="number" name="number" class="form-control" id="inputEmail3" placeholder="请输入账号">
 							    </div>
 						    </div>
 							<div class="form-group">
